# xdebug

./: .appveyor.yml  .azure-pipelines.yml  .cvsignore  .gdbinit  .gitattributes  .gitignore  .travis.yml  CONTRIBUTING.rst  CREDITS  Changelog  LICENSE  Makefile  Makefile.frag  Makefile.in  Makefile.objects  NEWS  README  README.markdown  README.rst  RELEASE_PROCESS.rst  TODO  aclocal.m4  bug00697.inc  bug00697.phpt  cachegrind.out.13203  compile.bat  composer.json  config.h  config.h.in  config.m4  config.nice  config.status  config.w32  configure  libtool  package.xml  package2.xml  php_xdebug.h  php_xdebug.stub.php  php_xdebug_arginfo.h  (+84 more)
.appveyor/: build.cmd  build.ps1  build_task.cmd  install.cmd  install.ps1  package.ps1  test.cmd  test.ps1  test_task.cmd
.azure/: test.yml
.azure/macos/: brew.yml  job.yml  php.yml  test.yml
.build.scripts/: compile-for-benchmark.sh  compile.sh  make-release.php  show-errors.sh
.circleci/: config.yml
.github/: FUNDING.yml
.github/benchmark-files/: bench.php  benchmark.ini  generate_summary.php  phpstan.neon  rector.php  run-phpstan.sh  run-rector.sh  run-server.sh  xdebug-benchmark.ini
.github/workflows/: benchmark.yml  build-releases.yml  build.yml  tests.yml
.travis.scripts/: compile.sh  show-errors.sh
.xdebugci/: build-nightly-php.sh  ingest.php  rebuild-all.sh  test-all.sh  test-thread.sh
autom4te.cache/: output.0  requests  traces.0
base/: xdebug_filter.c  xdebug_monitor.c  xdebug_stack.c  xdebug_superglobals.c  xdebug_superglobals.h
contrib/: branch-coverage-to-dot.php  extract-log-calls.php  online_profiling_prepend.php  tracefile-analyser.php  xdebugc  xt.vim
contrib/api/: parser.php
coverage/: xdebug_branch_info.c  xdebug_code_coverage.c
debugclient/: .cvsignore  .gitignore  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  README  acinclude.m4  buildconf  configure.ac  configure.in  cvsclean  debugclient.dsp  debugclient.sln  debugclient.vcxproj  debugclient.vcxproj.filters  getopt.c  ltmain.sh  main.c  usefulstuff.c  usefulstuff.h
debugger/: xdebug_handler_dbgp.c  xdebug_handler_dbgp.h  xdebug_handlers.c
docs/: Makefile  dbgp.txt  gdb.txt
lib/: xdebug_compat.c  xdebug_private.h  xdebug_set.c  xdebug_str.h  xdebug_var.c  xdebug_var.h  xdebug_xml.c
lib/bearssl/: import-list.txt
m4/: clocks.m4
modules/: xdebug.la
profiler/: xdebug_profiler.c
src/base/: base.c  base.h  base.lo  base_globals.h  base_private.h  ctrl_socket.c  ctrl_socket.h  filter.c  filter.h  filter.lo  monitor.c  monitor.h  monitor.lo  stack.c  stack.h  stack.lo  superglobals.c  superglobals.h  superglobals.lo  xdebug_filter.c  xdebug_filter.h  xdebug_stack.c  xdebug_stack.h  xdebug_superglobals.c
src/coverage/: branch_info.c  branch_info.h  branch_info.lo  code_coverage.c  code_coverage.h  code_coverage.lo  code_coverage_private.h  xdebug_branch_info.c  xdebug_branch_info.h  xdebug_code_coverage.h
src/debugger/: com.c  com.h  com.lo  debugger.c  debugger.h  debugger.lo  debugger_private.h  frankenphp.c  frankenphp.h  handler_dbgp.c  handler_dbgp.h  handler_dbgp.lo  handlers.c  handlers.h  handlers.lo  ip_info.c  ip_info.h  xdebug_com.c  xdebug_handlers.h  xdebugorg.h
src/develop/: develop.c  develop.h  develop_private.h  monitor.c  monitor.h  php_functions.c  stack.c  stack.h  superglobals.c  superglobals.h
src/gcstats/: gc_stats.c  gc_stats.h  gc_stats.lo  gc_stats_private.h  xdebug_gc_stats.c
src/lib/: cmd_parser.c  cmd_parser.h  compat.c  compat.h  compat.lo  crc32.c  crc32.h  crc32.lo  file.c  file.h  hash.c  hash.h  hash.lo  headers.c  headers.h  lib.c  lib.h  lib.lo  lib_private.h  llist.c  llist.h  llist.lo  log.c  log.h  mm.h  normalize_path.c  normalize_path.h  php-header.h  private.c  private.h  set.c  set.h  set.lo  str.c  (+40 more)
tests/: .cvsignore  .gitignore  .test1.php.swp  001.phpt  670-ConsistentHashing.inc  array_map-php55.phpt  array_map.phpt  assert_test-001.phpt  assert_test-002.phpt  assert_test-003.phpt  assert_test-004.phpt  assert_test.phpt  assignment-trace-dim-op.phpt  assignment-trace-obj-op-002.phpt  assignment-trace-op.phpt  assignment-trace-this-op-002.phpt  assignment-trace1-php72-opcache.phpt  assignment-trace1.phpt  assignment-trace10.phpt  assignment-trace2-php72-opcache.phpt  assignment-trace2-php73-opcache.phpt  assignment-trace2.phpt  assignment-trace3.phpt  assignment-trace4.phpt  assignment-trace5.phpt  assignment-trace6-opcache.phpt  assignment-trace6-php72-opcache.phpt  assignment-trace6.phpt  assignment-trace7-php72-opcache.phpt  assignment-trace7.phpt  assignment-trace8-php52.phpt  assignment-trace8.phpt  assignment-trace9-php52.phpt  assignment-trace9.phpt  auto_trace.phpt  backtrace-args-php5.phpt  backtrace-args-php7.phpt  backtrace-args-php70.phpt  backtrace-args-php71.phpt  backtrace-complex-php5.phpt  (+1039 more)
tracing/: xdebug_trace_computerized.c  xdebug_trace_html.c  xdebug_trace_html.h  xdebug_trace_textual.c
(+2049 files in other folders)
