## $Id: Makefile.am,v 1.1 2002-11-12 11:07:59 derick Exp $
##

## The contents of this file are subject to the Vulcan Logic Public
## License Version 1.1 (the "License"); you may not use this file
## except in compliance with the License. You may obtain a copy of
## the License at http://www.vl-srm.net/vlpl/
##
## Software distributed under the License is distributed on an "AS
## IS" basis, WITHOUT WARRANTY OF ANY KIND, either express or
## implied. See the License for the specific language governing
## rights and limitations under the License.
##
## The Original Code is vl-srm.net code.
##
## The Initial Developer of the Original Code is the Vulcan Logic 
## Group.  Portions created by Vulcan Logic Group are Copyright (C) 
## 2000, 2001, 2002 Vulcan Logic Group. All Rights Reserved.
##
## Contributor(s): 
##/

debugclient_LDFLAGS    = -export-dynamic

bin_PROGRAMS        = debugclient
debugclient_SOURCES = main.c usefulstuff.c
